# nanoquant

./: .gitignore  2026-05-20-221105-local-command-caveatcaveat-the-messages-below.txt  CHANGELOG_v0_2_0.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  NANOQUANT_ANALYSIS_REPORT.md  NANOQUANT_ANALYSIS_REPORT_CORRECTED.md  QUICKSTART_MAC.md  QUICKSTART_V0_2_0.sh  README.md  Test.py  memory_configs.py  pi-session-2026-05-16T20-28-25-136Z_019e3279-d2af-76df-86bb-242c2d42ee21.html  pyproject.toml  quantize_memory_optimized.py  test_critical_fixes.py  test_integration_v0_2_0.py  test_memory_optimized.py
.bob/: custom_modes.yaml
examples/: basic_usage.py  test_components.py
outputs/quantized_mps/: nanoquant_config.json  nanoquant_state.pt
scripts/: evaluate.py  quantize.py  quantize_demo.py  quantize_mps_optimized.py  test_mps_fix.py
src/nanoquant/: __init__.py  admm.py  calibration.py  config.py  device_utils.py  error_mitigation.py  evaluation.py  gguf_export.py  group_scale.py  inference.py  kernels.py  model_reconstruction.py  moe_quantization.py  packing.py  quantization.py  reconstruction.py  refinement.py  svid.py  ternary_init.py
src/nanoquant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_nanoquant.py
